--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
     :root {
-        --cor-Top: #ffffff;
-        --cor-fundo: #457b9d;
+        --cor-Top: #A8DADC;
+        --cor-fundo: #eff9fc;
         --cor-destaque: #ff6600;
         --cor-texto: #353535;
         --cor-secundaria: #dadada;
@@ -53,7 +53,7 @@
 
     #corLog {
         /* color: linear-gradient(180deg, #00FF00, #ff6600); */
-        background-image: linear-gradient(to right, #c1d3d0, #90ff8c);
+        background-image: linear-gradient(to right,#1D3557);
         /* Exemplo de gradiente */
 
         /* Recorta o background para o formato do texto (webkit- prefix é necessário para compatibilidade) */
@@ -67,8 +67,10 @@
 
         /* Opcional: Garante que o span se comporte bem com o gradiente */
         display: inline-block;
-    }
 
+        font-family: Arial, Helvetica, sans-serif;
+
+    }
 
     /* Card Grupo */
 
