--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@
         padding-top: 30px;
         font-size: 2rem;
         /* text-align: center; */
-        transform: translateX(20%);
+        margin-left: 20%;
         /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
         color: var(--corh1);
         font-weight: bold;
@@ -38,7 +38,7 @@
 
     .subTitle1 {
         /* text-align: center; */
-        transform: translateX(20%);
+        margin-left: 20%;
         font-family: Arial, Helvetica, sans-serif;
         color: #808080;
     }
@@ -82,7 +82,7 @@
         gap: 1.5rem;
         padding: 1rem;
         margin: 1.5rem auto;
-        max-width: 90%;
+        max-width: 70%;
     }
 
     .conteudo1 {
@@ -240,33 +240,46 @@
         justify-content: center;
         margin-top: 2px;
     }
-    #menuNav {
-        display: flex;
-        flex-direction: wrap;
-        gap: 10px;
-        padding: 20px;
-        background-color: var(--cor-bloco);
-        border-radius: 10px;
-        box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
+
+
+    #proxevent {
+        text-align: center;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        margin-left: 15%;
         font-family: Arial, Helvetica, sans-serif;
-        color: var(--cor-texto);
-        font-size: 1rem;
-        width: 100%;
-        max-width: 300px;
-    }
-
-    side
-
-    .menu {
-        display: flex;
-        font-size: 1.2rem;
+        color: var(--corh1);
         font-weight: bold;
-        margin-bottom: 10px;
+
     }
-    .title3 {
-        font-size: 1rem;
-        margin-bottom: 5px;
+
+    #proxeventitle {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 15px;
     }
+
+    #filtros {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+    }
+
+    .blocos {
+        width: 70%;
+        height: 250px;
+        border-radius: 15px;
+        border: #1D3557 3px solid;
+    }
+
+    .title-blocos {
+        background: #1D3557;
+        padding: 10px;
+        border-radius: 12px 12px 0 0;
+        text-align: center;
+    }
+
 
 
 
