--- a/css/CadastrarPS.css
+++ b/css/CadastrarPS.css
@@ -141,6 +141,42 @@
     }
 
 
+    #proxevent {
+        text-align: center;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        margin-left: 0%;
+        font-family: Arial, Helvetica, sans-serif;
+        color: var(--corh1);
+        font-weight: bold;
+        height: auto;
+        width: 70%;
+        margin-right: auto;
+        margin-left: auto;
+
+    }
+
+    #proxeventitle {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 15px;
+    }
+
+    .title-blocos {
+        background: var(--cor-fundo);
+        padding: 10px;
+        border-radius: 12px 12px 0 0;
+        text-align: center;
+    }
+
+    .blocos {
+        width: 100%;
+        height: 450px;
+        border-radius: 15px;
+        border: #1D3557 2px solid;
+    }
+
 
     /* ----------------------------- */
 
