--- a/css/CadastrarPS.css
+++ b/css/CadastrarPS.css
@@ -174,7 +174,7 @@
         width: 100%;
         height: 450px;
         border-radius: 15px;
-        border: #1D3557 2px solid;
+        border: #2759a0a8 2px solid;
     }
 
 
